<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCFC"
    android:clipToPadding="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/operator"
        android:layout_width="48dp"
        android:layout_height="57dp"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <Button
        android:id="@+id/divide"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/divide"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toTopOf="@+id/multiply"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/multiply"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/subtract"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintStart_toEndOf="@+id/subtract"
        app:layout_constraintTop_toTopOf="@+id/subtract"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/number_2"
        android:importantForAutofill="no"
        android:inputType="numberSigned|number|textPersonName|numberDecimal"
        android:textColor="#000000"
        android:textColorHint="#81000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:text="@string/subtract"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toTopOf="@+id/add"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="260dp"
        android:text="@string/add"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/subtract"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:ems="10"
        android:hint="@string/number_1"
        android:importantForAutofill="no"
        android:inputType="numberSigned|textPersonName|numberDecimal"
        android:shadowColor="#0C0C0C"
        android:textColor="#000000"
        android:textColorHint="#81000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/operator"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:layout_marginBottom="166dp"
        android:text="@string/result"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="132dp"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116"
        android:contentDescription="@string/operator_image" />

</androidx.constraintlayout.widget.ConstraintLayout>